--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
   </form>
 </div>
 
-<script src="jquery-3.2.1.min.js"></script>
+<script src="js/jquery.min.js"></script>
 <script src="script.js"></script>
 
 </body>
